--- a/app/src/main/res/layout/activity_reading.xml
+++ b/app/src/main/res/layout/activity_reading.xml
@@ -5,7 +5,7 @@
     android:fitsSystemWindows="true"
     android:layout_height="match_parent"
     android:id="@+id/containerReading"
-    android:background="#E9E8ED"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".presentation.ReadingActivity">
 
@@ -27,7 +27,7 @@
                 android:id="@+id/bodyTv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#E9E8ED"
+                android:background="@color/white"
                 android:padding="6dp"
                 android:text="@string/test"
                 android:textIsSelectable="true"
