--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,13 +21,14 @@
         android:id="@+id/bottomBar"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.1"
-        android:layout_margin="4dp"
         app:backgroundColor="@color/purple_700"
-        app:cornerRadius="12dp"
+        app:indicatorColor="#5e4ecb"
+        android:elevation="4dp"
+        app:iconTint="#CFC5C5"
         app:indicatorRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/menu"
         app:textColor="@color/white" />
