--- a/app/src/main/res/drawable/happy_item_style.xml
+++ b/app/src/main/res/drawable/happy_item_style.xml
@@ -5,8 +5,8 @@
             <corners android:radius="20dp"/>
             <gradient
                 android:angle="45"
-                android:startColor="#4CAF50"
-                android:endColor="#B4CC9A"
+                android:startColor="#9C27B0"
+                android:endColor="#9C27B0"
                 android:type="linear" />
         </shape>
     </item>
