--- a/app/src/main/res/drawable/life_item_style.xml
+++ b/app/src/main/res/drawable/life_item_style.xml
@@ -5,8 +5,9 @@
             <corners android:radius="20dp"/>
             <gradient
                 android:angle="45"
-                android:endColor="#9880C1"
-                android:startColor="#6741AA"
+                android:endColor="@color/purple_700"
+                android:centerColor="#4F2D9C"
+                android:startColor="@color/purple_700"
                 android:type="linear" />
         </shape>
     </item>
