--- a/app/src/main/res/layout/fragment_lovee.xml
+++ b/app/src/main/res/layout/fragment_lovee.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".FavoritesFragment">
+    tools:context=".LoveeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
@@ -12,4 +12,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-</RelativeLayout>
+</FrameLayout>
