--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:layout_margin="4dp"
+    android:layout_margin="10dp"
     android:background="@drawable/item_style"
-    android:elevation="2dp">
+    android:elevation="4dp">
 
 
     <TextView
@@ -27,7 +28,8 @@
         android:src="@drawable/ic_baseline_navigate_next_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/black" />
 
     <TextView
         android:id="@+id/titleTv"
@@ -35,8 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:ellipsize="end"
-        android:lines="2"
         android:gravity="center|start"
+        android:lines="2"
         android:maxLines="2"
         android:text="Как стать богатымsasasaassassasasasas ?"
         android:textColor="@color/black"
