--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,6 +6,11 @@
         android:icon="@drawable/ic_baseline_home_24"/>
 
     <item
+        android:id="@+id/searchMenu"
+        android:title="Поиск"
+        android:icon="@drawable/ic_baseline_search_24"/>
+
+    <item
         android:id="@+id/favoritesMenu"
         android:title="Избранные"
         android:icon="@drawable/ic_baseline_turned_in_not_24"/>
@@ -14,5 +19,6 @@
         android:id="@+id/settingMenu"
         android:title="Настройки"
         android:icon="@drawable/ic_baseline_settings_24"/>
+
 
 </menu>
