--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -55,7 +55,7 @@
                 app:layout_constraintTop_toTopOf="@+id/guideline2">
 
                 <com.mackhartley.roundedprogressbar.RoundedProgressBar
-                    android:id="@+id/progress_bar"
+                    android:id="@+id/progress_barLife"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_marginBottom="16dp"
@@ -398,5 +398,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
