--- a/app/src/main/res/layout-land/item.xml
+++ b/app/src/main/res/layout-land/item.xml
@@ -4,24 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="65dp"
+    android:layout_height="?attr/actionBarSize"
     android:layout_margin="10dp"
     android:background="@drawable/item_style"
-    android:elevation="1.5dp">
+    android:elevation="4dp">
 
 
     <TextView
         android:id="@+id/stateIcon"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:background="@drawable/indicator_tint"
-        android:backgroundTint="@color/black"
+        android:background="@drawable/style_line"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_percent="0.6"
+        app:layout_constraintHeight_percent="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.02" />
+        app:layout_constraintWidth_percent="0.01" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -37,7 +35,7 @@
         android:id="@+id/titleTv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="4dp"
         android:ellipsize="end"
         android:gravity="center|start"
         android:lines="2"
