--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -8,17 +8,30 @@
     android:padding="8dp"
     tools:context=".presentation.fragments.SearchFragment">
 
-    <EditText
-        android:id="@+id/searchView"
-        android:paddingStart="24dp"
-        android:paddingEnd="36dp"
-        android:inputType="textPersonName"
-        android:drawableStart="@drawable/ic_baseline_search_24"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/search_style"
-        android:hint="Ишите..."
-        />
+        android:layout_height="wrap_content"
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp"
+        app:endIconDrawable="@drawable/ic_baseline_clear_24"
+        app:endIconMode="clear_text"
+        app:expandedHintEnabled="false"
+        app:hintAnimationEnabled="false"
+        app:hintEnabled="false"
+        app:startIconDrawable="@drawable/ic_baseline_search_24">
+
+        <EditText
+            android:id="@+id/searchView"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="8dp"
+            android:background="@drawable/search_style"
+            android:hint="@string/search"
+            android:inputType="textPersonName"
+            android:padding="12dp"
+            android:paddingBottom="16dp" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
