--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -25,11 +25,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="12dp"
-        android:scrollbars="none"
         android:paddingBottom="12dp"
+        android:scrollbars="none"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.5"
         tools:layout_editor_absoluteX="18dp">
@@ -44,8 +41,9 @@
                 android:id="@+id/lifeBtn"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
+                android:layout_margin="12dp"
                 android:background="@drawable/life_item_style"
-                android:elevation="4dp"
+                android:elevation="8dp"
                 android:paddingStart="24dp"
                 android:paddingEnd="18dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +63,7 @@
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/life_counterTv"
                     app:layout_constraintWidth_percent="0.6"
-                    app:rpbBackgroundColor="#9783A8"
+                    app:rpbBackgroundColor="#4CAF50"
                     app:rpbBackgroundTextColor="#FFFFFF"
                     app:rpbCornerRadius="2dp"
                     app:rpbCornerRadiusBottomLeft="4dp"
@@ -73,7 +71,7 @@
                     app:rpbCornerRadiusTopLeft="4dp"
                     app:rpbCornerRadiusTopRight="4dp"
                     app:rpbProgress="40"
-                    app:rpbProgressColor="#64408A"
+                    app:rpbProgressColor="#30CC36"
                     app:rpbProgressTextColor="#FFFFFF"
                     app:rpbShowProgressText="true"
                     app:rpbTextSize="18sp" />
@@ -91,13 +89,14 @@
                     android:layout_height="0dp"
                     android:layout_alignParentEnd="true"
                     android:layout_centerInParent="true"
-                    android:layout_marginEnd="18dp"
-                    android:src="@drawable/ic_tree_life"
+                    android:layout_marginEnd="8dp"
+                    android:src="@drawable/ic_goldfish"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHeight_percent="0.8"
+                    app:layout_constraintHeight_percent="0.6"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintWidth_percent="0.3" />
+                    app:layout_constraintWidth_percent="0.3"
+                    app:tint="@color/white" />
 
                 <TextView
                     android:id="@+id/tv1"
@@ -129,9 +128,9 @@
                 android:id="@+id/successBtn"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
-                android:layout_marginTop="16dp"
+                android:layout_margin="12dp"
                 android:background="@drawable/success_item_style"
-                android:elevation="4dp"
+                android:elevation="8dp"
                 app:layout_constraintHeight_percent="0.2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/lifeBtn"
@@ -165,12 +164,13 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_marginEnd="24dp"
-                    android:src="@drawable/ic_success"
+                    android:src="@drawable/ic_goal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHeight_percent="0.8"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintWidth_percent="0.3" />
+                    app:layout_constraintWidth_percent="0.3"
+                    app:tint="@color/white" />
 
                 <TextView
                     android:id="@+id/tv3"
@@ -203,9 +203,10 @@
                 android:id="@+id/happyBtn"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
+                android:layout_margin="12dp"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/happy_item_style"
-                android:elevation="4dp"
+                android:elevation="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.2"
                 app:layout_constraintTop_toBottomOf="@+id/lifeBtn"
@@ -241,12 +242,13 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
                     android:layout_marginEnd="18dp"
-                    android:src="@drawable/ic_happy"
+                    android:src="@drawable/ic_diagram"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHeight_percent="0.8"
+                    app:layout_constraintHeight_percent="0.7"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintWidth_percent="0.3" />
+                    app:layout_constraintWidth_percent="0.25"
+                    app:tint="@color/white" />
 
                 <TextView
                     android:id="@+id/happyCountTv"
@@ -280,9 +282,10 @@
                 android:id="@+id/loveBtn"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
+                android:layout_margin="12dp"
                 android:layout_marginTop="12dp"
                 android:background="@drawable/love_item_style"
-                android:elevation="4dp"
+                android:elevation="8dp"
                 android:paddingStart="24dp"
                 android:paddingEnd="12dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -327,12 +330,13 @@
                     android:layout_height="0dp"
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="18dp"
-                    android:src="@drawable/ic_love"
+                    android:src="@drawable/ic_talk"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHeight_percent="0.8"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintWidth_percent="0.3" />
+                    app:layout_constraintWidth_percent="0.3"
+                    app:tint="@color/white" />
 
                 <TextView
                     android:id="@+id/tv7"
@@ -398,7 +402,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
